--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
