--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.487.0",
-    "next": "15.2.4",
     "next-auth": "^4.24.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.3.1",
@@ -32,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/parser": "^8.31.0",
     "autoprefixer": "^10.4.21",
@@ -45,8 +46,8 @@
     "glob": "^11.0.2",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.1.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "webpack": "^5.99.7"
   }
 }
