--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.487.0",
+    "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.3.1",
-    "@tailwindcss/postcss": "^4.1.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
