--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
