--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "fix:all": "npm run lint:fix && npm run format && npm run cleanup-pages && npm run fix-import-lines && npm run fix-pages-syntax && npm run fix-format-pages && npm run refactor-pages",
+    "fix:import-case": "node scripts/fix-import-case.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -20,17 +22,20 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.9.4",
     "lucide-react": "^0.487.0",
     "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
-    "tailwindcss": "^2.2.19"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.3.1",
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -48,6 +53,7 @@
     "glob": "^11.0.2",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
+    "tailwindcss": "^4.1.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "webpack": "^5.99.7"
