--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "fix:all": "npm run lint:fix && npm run format && npm run cleanup-pages && npm run fix-import-lines && npm run fix-pages-syntax && npm run fix-format-pages && npm run refactor-pages",
     "fix:import-case": "node scripts/fix-import-case.js",
+    "changelog": "node scripts/generate-changelog.js",
+    "version": "npm run changelog && npm version patch",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
