--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-react": "^7.37.5",
     "glob": "^11.0.2",
     "postcss": "^8.5.3",
+    "postcss-import": "^16.1.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.5",
     "ts-node": "^10.9.2",
