🔧 إعادة هيكلة البنية + إصلاحات التوجيه بعد تسجيل الدخول
- فصل بنية المشروع بين المستخدم والمتجر داخل src/app/user و src/app/store.
- إضافة صفحات: /user/dashboard و /store/dashboard لتفعيل التوجيه الصحيح.
- تعديل Navbar.tsx لاستخدام cookies() بشكل صحيح مع App Router.
- تمرير cookieStore من layout.tsx لتفادي خطأ الجلسة.
- تحسين middleware.ts لتوجيه المستخدم حسب نوع الحساب.
- ضبط الجلسة يدويًا بعد signInWithPassword باستخدام setSession.
- تتبع الجلسة والتوجيه باستخدام console.log.
🚨 المشكلة لا تزال مستمرة: يتم تسجيل الدخول لكن لا يتم التوجيه بشكل فعلي.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,6 @@
     "src/**/*",
     ".next/types/**/*.ts",
     "next.config.js"
-  ],
+, "scripts/createStoreStructure.js"  ],
   "exclude": ["node_modules", ".next"]
 }
