feat: Implement user and store login functionality with middleware protection
- Added TestRedirectPage component for testing login and redirection.
- Created middleware for route protection based on user account type.
- Removed old middleware file.
- Developed test scripts for login API and user/store login scenarios.
- Enhanced authentication flow documentation and testing procedures.
- Implemented browser-based login tests using Puppeteer.
- Established connection tests with Supabase and user data verification.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.3.1",
+    "@types/next": "^8.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
