feat: Add development and production build tasks to VSCode configuration
docs: Create BUILD_STATUS.md to summarize build status and known issues

chore: Update ESLint configuration for improved code quality and compatibility

feat(api): Implement user check and fix routes for store and user accounts

feat: Create auth flow test page for user and store login/logout functionality

fix: Update landing page with dynamic rendering to resolve prerender issues

feat: Add simple home page for user and store access

chore: Implement scripts for fixing store user and testing authentication flows

test: Comprehensive testing for complete logout/login flow

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "./tsconfig.extends.json",
   "compilerOptions": {
     "target": "ES2022",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -10,7 +14,12 @@
     "esModuleInterop": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "types": ["react", "react-dom", "node", "@types/node"],
+    "types": [
+      "react",
+      "react-dom",
+      "node",
+      "@types/node"
+    ],
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -29,17 +38,23 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    "next-env.d.ts",
     ".next/types/**/*.ts",
     "app/**/*",
     "components/**/*",
-    "src/**/*",
+    "global.d.ts",
+    "hooks/**/*",
     "lib/**/*",
+    "next-env.d.ts",
+    "next.config.js",
+    "src/**/*",
     "types/**/*",
     "utils/**/*",
-    "hooks/**/*",
-    "global.d.ts",
-    "next.config.js"
+    "out/types/**/*.ts"
   ],
-  "exclude": ["node_modules", ".next", "out", "**/binaaHub/**"]
+  "exclude": [
+    "node_modules",
+    ".next",
+    "out",
+    "**/binaaHub/**"
+  ]
 }
