--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "fix:import-case": "node scripts/fix-import-case.js",
     "changelog": "node scripts/generate-changelog.js",
     "version": "npm run changelog && npm version patch",
-    "dev": "next dev -p 3001",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -56,6 +56,9 @@
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@next/eslint-plugin-next": "^15.3.1",
+    "@swc/core": "^1.11.29",
+    "@swc/core-win32-x64-msvc": "^1.11.29",
+    "@swc/helpers": "^0.5.17",
     "@types/estree": "^1.0.7",
     "@types/next": "^8.0.7",
     "@types/node": "^22.15.29",
