--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
+    "pdfjs-dist": "^5.3.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
+    "tesseract.js": "^6.0.1",
     "tsx": "^4.19.4",
     "uuid": "^11.1.0",
     "zustand": "^5.0.4"
