--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.16",
     "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
+    "jspdf": "^3.0.1",
     "jwt-simple": "^0.5.6",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.294.0",
-    "next": "14.0.4",
+    "next": "^14.2.29",
     "next-auth": "^4.24.5",
     "pg": "^8.11.3",
     "postcss": "^8.4.32",
