--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/leaflet": "^1.9.18",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.15.0",
     "jspdf": "^3.0.1",
     "leaflet": "^1.9.4",
@@ -66,6 +67,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.0",
     "@types/estree": "^1.0.7",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.12",
     "@types/next": "^8.0.7",
     "@types/node": "^22.15.29",
