--- a/package.json
+++ b/package.json
@@ -31,16 +31,17 @@
     "@types/leaflet": "^1.9.18",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.15.0",
     "jspdf": "^3.0.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
-    "next": "^15.3.3",
+    "next": "^14.2.3",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "pdfjs-dist": "^5.3.31",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
@@ -66,6 +67,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.0",
     "@types/estree": "^1.0.7",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.12",
     "@types/next": "^8.0.7",
     "@types/node": "^22.15.29",
