--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,28 +33,49 @@
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ],
+      "@/components/*": [
+        "src/components/*"
+      ],
+      "@/lib/*": [
+        "src/lib/*"
+      ],
+      "@/types/*": [
+        "src/types/*"
+      ],
+      "@/utils/*": [
+        "src/utils/*"
+      ],
+      "@/hooks/*": [
+        "src/hooks/*"
+      ],
+      "@/app/*": [
+        "src/app/*"
+      ]
+    }
   },
   "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "app/**/*",
-    "components/**/*",
-    "global.d.ts",
-    "hooks/**/*",
-    "lib/**/*",
-    "next-env.d.ts",
-    "next.config.js",
-    "src/**/*",
-    "types/**/*",
-    "utils/**/*",
-    "out/types/**/*.ts"
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.js",
+    "src/**/*.jsx",
+    "src/**/*.json",
+    "src/**/*.d.ts",
+    "src/**/*.config.js",
+    "src/**/*.env",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
-    ".next",
+    "dist",
+    "build",
     "out",
-    "**/binaaHub/**"
+    "src/**/*.test.ts",
+    "src/**/*.test.js"
   ]
 }
