--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@types/leaflet": "^1.9.18",
     "autoprefixer": "^10.4.21",
     "axios": "^1.6.2",
-    "bcryptjs": "^3.0.2",    "clsx": "^2.1.1",
+    "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.15.0",
     "html2canvas": "^1.4.1",
@@ -42,15 +44,17 @@
     "jwt-simple": "^0.5.6",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
-    "next": "^14.2.3",
+    "next": "^15.3.3",
     "next-auth": "^4.24.11",
-    "node-fetch": "^3.3.2",    "pdfjs-dist": "^5.3.31",
+    "node-fetch": "^3.3.2",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "react-select": "^5.8.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
@@ -93,6 +97,7 @@
     "@typescript-eslint/parser": "^8.33.0",
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
     "dotenv": "^16.5.0",
     "eslint": "^9.25.1",
     "eslint-config-next": "^15.3.1",
@@ -104,9 +109,12 @@
     "glob": "^11.0.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "null-loader": "^4.0.1",
     "postcss": "^8.5.3",
     "postcss-import": "^16.1.0",
+    "postcss-loader": "^8.1.1",
     "prettier": "^3.5.3",
+    "style-loader": "^4.0.0",
     "supabase": "^2.23.4",
     "supabase-cli": "^0.0.21",
     "tailwindcss": "^3.4.17",
