--- a/package.json
+++ b/package.json
@@ -47,9 +47,8 @@
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
-    "pdfjs-dist": "^5.3.31",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "pdfjs-dist": "^5.3.31",    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
@@ -80,18 +79,16 @@
     "@supabase/supabase-js": "^2.49.10",
     "@swc/core": "^1.11.29",
     "@swc/core-win32-x64-msvc": "^1.11.29",
-    "@swc/helpers": "^0.5.17",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.0",
+    "@swc/helpers": "^0.5.17",    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/estree": "^1.0.7",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.12",
     "@types/next": "^8.0.7",
     "@types/node": "^22.15.29",
-    "@types/pg": "^8.10.9",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.17",
+    "@types/pg": "^8.10.9",    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.33.0",
     "@typescript-eslint/parser": "^8.33.0",
