2nd changes to main

--- a/package.json
+++ b/package.json
@@ -76,10 +76,8 @@
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@next/eslint-plugin-next": "^15.3.1",
-    "@supabase/supabase-js": "^2.49.10",
-    "@swc/core": "^1.11.29",
-    "@swc/core-win32-x64-msvc": "^1.11.29",
-    "@swc/helpers": "^0.5.17",    "@testing-library/jest-dom": "^6.4.2",
+    "@supabase/supabase-js": "^2.49.10",    "@swc/core": "^1.11.29",
+    "@swc/helpers": "^0.5.17","@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/estree": "^1.0.7",
