--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.49.10",
     "@tanstack/react-query": "^5.12.2",
     "@types/google.maps": "^3.58.1",
     "@types/leaflet": "^1.9.18",
@@ -47,7 +46,8 @@
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
-    "pdfjs-dist": "^5.3.31",    "react": "^18.3.1",
+    "pdfjs-dist": "^5.3.31",
+    "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
@@ -76,8 +76,10 @@
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@next/eslint-plugin-next": "^15.3.1",
-    "@supabase/supabase-js": "^2.49.10",    "@swc/core": "^1.11.29",
-    "@swc/helpers": "^0.5.17","@testing-library/jest-dom": "^6.4.2",
+    "@supabase/supabase-js": "^2.50.0",
+    "@swc/core": "^1.11.29",
+    "@swc/helpers": "^0.5.17",
+    "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/estree": "^1.0.7",
@@ -85,7 +87,8 @@
     "@types/jest": "^29.5.12",
     "@types/next": "^8.0.7",
     "@types/node": "^22.15.29",
-    "@types/pg": "^8.10.9",    "@types/react": "^18.3.23",
+    "@types/pg": "^8.10.9",
+    "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.33.0",
