🎨 Refactor store dashboard and major repository cleanup
✨ Features:
- Refactored store dashboard with optimal layout and UX
- Fixed duplicate invitation code display (BinnaHub-BinnaHub issue)
- Reorganized dashboard sections for better information architecture
- Added construction categories and products API endpoints
- Enhanced authentication system with proper redirects

🐛 Bug Fixes:
- Removed duplicate dashboard sections and content
- Fixed invitation code formatting logic
- Resolved ERP dashboard duplication issues
- Improved responsive grid layouts and visual consistency

🧹 Repository Cleanup:
- Removed 76+ unnecessary development files
- Deleted duplicate Medusa installations (~4GB freed)
- Cleaned up test scripts, debug files, and progress docs
- Streamlined codebase for production readiness

📱 UI/UX Improvements:
- Consistent visual hierarchy across dashboard
- Proper section ordering: Alerts → Invitation → Actions → Metrics
- Enhanced hover effects and transitions
- Mobile-responsive layouts

🔧 Technical:
- Consolidated ERP reports with unique theming
- Improved component organization and maintainability
- Added comprehensive API endpoints for construction materials
- Enhanced TypeScript types and interfaces

--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "fix:import-case": "node scripts/fix-import-case.js",
     "changelog": "node scripts/generate-changelog.js",
     "version": "npm run changelog && npm version patch",
-    "dev": "next dev -p 3000",
+    "dev": "node server.js",
+    "dev:next": "next dev -p 3000",
+    "dev:unified": "node server.js",
+    "dev:medusa": "node start-with-medusa.js",
+    "medusa:test": "node test-medusa-integration.js",
+    "medusa:setup": "cd medusa-backend && npm install && npm run build && npx medusa db:migrate",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
+    "start:next": "next start",
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -24,6 +30,9 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.0.18",
+    "@medusajs/js-sdk": "^2.8.4",
+    "@medusajs/medusa-js": "^6.1.10",
+    "@medusajs/types": "^2.8.4",
     "@react-google-maps/api": "^2.20.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
@@ -31,14 +40,20 @@
     "@tanstack/react-query": "^5.12.2",
     "@types/google.maps": "^3.58.1",
     "@types/leaflet": "^1.9.18",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.3",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
+    "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.15.0",
     "html2canvas": "^1.4.1",
+    "http-proxy-middleware": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "jwt-simple": "^0.5.6",
     "leaflet": "^1.9.4",
@@ -81,6 +96,7 @@
     "@swc/helpers": "^0.5.17",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.7",
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/estree": "^1.0.7",
     "@types/file-saver": "^2.0.7",
@@ -112,6 +128,7 @@
     "postcss-import": "^16.1.0",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.5.3",
+    "puppeteer": "^24.10.1",
     "style-loader": "^4.0.0",
     "supabase": "^2.23.4",
     "supabase-cli": "^0.0.21",
