--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,44 @@ src/components/ProjectsDebugger.tsx
 !eslint.config.js
 !prettier.config.js
 !.prettierrc.js
+
+# ============================================
+# TEMPORARY AND ANALYSIS FILES
+# ============================================
+
+# Temporary directories
+medusa-backend/
+medusa/
+tests/
+tsconfig/
+
+# Temporary documentation files
+*_COMPLETE.md
+*_FIXED.md
+*_REPORT.md
+*_ANALYSIS.md
+*_GUIDE.md
+*_SOLUTION.md
+*_FINAL.md
+*_SUCCESS.md
+*_UPDATE.md
+*_IMPLEMENTATION.md
+
+# Temporary script files
+analyze-*.js
+change-*.js
+check-*.sql
+cleanup-*.js
+dashboard-*.js
+find-*.js
+fix_*.sql
+generate-*.js
+get-*.js
+reset-*.js
+setup-*.sh
+validate-*.js
+
+# Temporary page files
+*-redirect.tsx
+*-unified.tsx
+*-temp.tsx
