--- a/.gitignore
+++ b/.gitignore
@@ -150,42 +150,11 @@ src/components/ProjectsDebugger.tsx
 !.prettierrc.js
 
 # ============================================
-# TEMPORARY AND ANALYSIS FILES
+# PROTECTED DOCUMENTATION FILES (NEVER DELETE)
 # ============================================
-
-# Temporary directories
-medusa-backend/
-medusa/
-tests/
-tsconfig/
-
-# Temporary documentation files
-*_COMPLETE.md
-*_FIXED.md
-*_REPORT.md
-*_ANALYSIS.md
-*_GUIDE.md
-*_SOLUTION.md
-*_FINAL.md
-*_SUCCESS.md
-*_UPDATE.md
-*_IMPLEMENTATION.md
-
-# Temporary script files
-analyze-*.js
-change-*.js
-check-*.sql
-cleanup-*.js
-dashboard-*.js
-find-*.js
-fix_*.sql
-generate-*.js
-get-*.js
-reset-*.js
-setup-*.sh
-validate-*.js
-
-# Temporary page files
-*-redirect.tsx
-*-unified.tsx
-*-temp.tsx
+!PLATFORM_FEATURES_ROADMAP.md
+!CRITICAL_SUPABASE_RECOVERY.md
+!FINAL_STATUS_AND_NEXT_STEPS.md
+!FIXES_COMPLETED_STATUS.md
+!README.md
+!CHANGELOG.md
