--- a/.gitignore
+++ b/.gitignore
@@ -154,6 +154,7 @@ src/components/ProjectsDebugger.tsx
 # ============================================
 !PLATFORM_FEATURES_ROADMAP.md
 !CRITICAL_FEATURES_IMPLEMENTATION_PLAN.md
+!STORE_PAGES_GAP_ANALYSIS.md
 !CRITICAL_SUPABASE_RECOVERY.md
 !FINAL_STATUS_AND_NEXT_STEPS.md
 !FIXES_COMPLETED_STATUS.md
