chore: Update .gitignore and cleanup temporary files
- Update .gitignore to exclude debug directories and temporary files
- Remove debug directories: auth-debug, loading-demo, mobile-test, test-loading
- Remove temporary deployment scripts and debug files
- Improve repository hygiene by preventing temporary files from being tracked

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,25 @@ next-env.d.ts
 test-*.js
 test-*.mjs
 debug-*.js
+debug-*.mjs
+
+# Debug and test directories
+src/app/auth-debug/
+src/app/loading-demo/
+src/app/mobile-test/
+src/app/test-loading/
+
+# Temporary deployment and fix scripts
+deploy-*.ps1
+deploy-*.sh
+setup-*.ps1
+setup-*.sh
+pre-commit-*.ps1
+
+# Temporary issue and debug files
+CLEANUP_BEFORE_COMMIT.md
+SUPABASE_CONNECTION_ISSUE.md
+URGENT_VERCEL_FIX.md
 verify-*.js
 check-*.js
 create-*.js
