feat: Complete store dashboard restoration and cleanup
- Upgraded all ERP widgets with modern UI patterns
- Fixed all TypeScript compilation errors
- Enhanced InventoryWidget, SupplierManagementWidget, PurchaseOrdersWidget, AnalyticsWidget, CRMWidget
- Added accessibility features, mobile responsiveness, skeleton loaders
- Implemented real-time updates, bulk actions, CSV export capabilities
- Added comprehensive error handling and logging
- Created auth debug and Supabase test pages for diagnostics
- Removed all unnecessary Odoo/IDURAR files and old Pages directory
- Cleaned up documentation and legacy components
- Achieved successful production build with no blocking errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "./tsconfig.extends.json",
   "compilerOptions": {
     "target": "ES2022",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -10,26 +14,49 @@
     "esModuleInterop": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "types": ["react", "react-dom", "node", "@types/node"],
+    "types": [
+      "react",
+      "react-dom",
+      "node",
+      "@types/node"
+    ],
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
     "allowImportingTsExtensions": true,
-    "plugins": [{ "name": "next" }],
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"],
-      "@/components/*": ["src/components/*"],
-      "@/lib/*": ["src/lib/*"],
-      "@/types/*": ["src/types/*"],
-      "@/utils/*": ["src/utils/*"],
-      "@/hooks/*": ["src/hooks/*"],
-      "@/app/*": ["src/app/*"]
+      "@/*": [
+        "src/*"
+      ],
+      "@/components/*": [
+        "src/components/*"
+      ],
+      "@/lib/*": [
+        "src/lib/*"
+      ],
+      "@/types/*": [
+        "src/types/*"
+      ],
+      "@/utils/*": [
+        "src/utils/*"
+      ],
+      "@/hooks/*": [
+        "src/hooks/*"
+      ],
+      "@/app/*": [
+        "src/app/*"
+      ]
     }
   },
   "include": [
