--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tanstack/react-query": "^5.12.2",
     "@types/google.maps": "^3.58.1",
     "@types/leaflet": "^1.9.18",
+    "@types/recharts": "^1.8.29",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
     "autoprefixer": "^10.4.21",
