--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,6 +56,9 @@
       ],
       "@/app/*": [
         "src/app/*"
+      ],
+      "@medusa/*": [
+        "medusa-develop/packages/admin/dashboard/src/*"
       ]
     }
   },
