--- a/package.json
+++ b/package.json
@@ -68,9 +68,9 @@
     "@medusajs/js-sdk": "^2.8.4",
     "@medusajs/medusa": "^2.8.4",
     "@medusajs/types": "^2.8.4",
-    "@mikro-orm/core": "^6.4.16",
-    "@mikro-orm/migrations": "^6.4.16",
-    "@mikro-orm/postgresql": "^6.4.16",
+    "@mikro-orm/core": "6.4.3",
+    "@mikro-orm/migrations": "6.4.3",
+    "@mikro-orm/postgresql": "6.4.3",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-switch": "^1.2.5",
     "@react-google-maps/api": "^2.20.6",
@@ -84,7 +84,7 @@
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
     "autoprefixer": "^10.4.21",
-    "awilix": "^12.0.5",
+    "awilix": "^8.0.1",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -190,6 +190,9 @@
     "webpack": "^5.99.7"
   },
   "overrides": {
-    "@swc/core": "1.5.7"
+    "@swc/core": "1.5.7",
+    "@mikro-orm/core": "6.4.3",
+    "@mikro-orm/migrations": "6.4.3", 
+    "@mikro-orm/postgresql": "6.4.3"
   }
 }
