--- a/package.json
+++ b/package.json
@@ -64,10 +64,12 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.0.18",
     "@medusajs/cache-redis": "^1.9.2",
-    "@medusajs/framework": "^0.0.1",
+    "@medusajs/framework": "^2.8.7",
+    "@medusajs/icons": "^2.8.7",
     "@medusajs/js-sdk": "^2.8.4",
-    "@medusajs/medusa": "^1.20.11",
+    "@medusajs/medusa": "^2.8.7",
     "@medusajs/types": "^2.8.4",
+    "@medusajs/ui": "^4.0.17",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
