🔧 Fix GitHub Actions workflow: Replace upper() with toUpper()
- Fixed invalid workflow function in ci-cd.yml line 161
- GitHub Actions uses toUpper() instead of upper() for string transformation
- This enables proper deployment of standalone products with dynamic project IDs

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -158,7 +158,7 @@ jobs:
       with:
         vercel-token: ${{ secrets.VERCEL_TOKEN }}
         vercel-org-id: ${{ secrets.ORG_ID }}
-        vercel-project-id: ${{ secrets[format('PROJECT_ID_{0}', upper(matrix.product.name))] }}
+        vercel-project-id: ${{ secrets[format('PROJECT_ID_{0}', toUpper(matrix.product.name))] }}
         vercel-args: '--prod'
         working-directory: ./src/standalone/${{ matrix.product.name }}
         scope: ${{ secrets.TEAM_ID }}
