--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "binna",
   "version": "0.1.2",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev -p 3000",
     "dev:turbo": "next dev -p 3000 --turbo",
