feat: Complete binaaHub enhancement phases 1-4
- ✅ Phase 1: Assessment & backup completed
- ✅ Phase 2: Code refactoring & dead code removal
- ✅ Phase 3: Performance optimization & modularization
- ✅ Phase 4: Testing infrastructure & quality assurance

Key improvements:
• Optimized core components with React.memo
• Enhanced Next.js config with performance features
• Created reusable UI components (ActionButton, DataCard, LoadingComponents)
• Implemented comprehensive validation & caching utilities
• Added Jest testing framework with test suites
• Standardized naming conventions across codebase
• Organized component exports for clean imports

All existing functionality preserved while improving performance and maintainability.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "next dev -p 3000",
     "dev:turbo": "next dev -p 3000 --turbo",
     "dev:fast": "next dev -p 3000 --turbo --experimental-https",
+    "dev:analyze": "ANALYZE=true npm run build",
+    "perf:check": "npm run type-check && npm run lint",
     "connect-user-pages": "node scripts/connect-user-pages.js",
     "sync-user-data": "node scripts/connect-user-pages.js && npm run dev",
     "fix:all": "npm run lint:fix && npm run format && npm run cleanup-pages && npm run fix-import-lines && npm run fix-pages-syntax && npm run fix-format-pages && npm run refactor-pages",
