feat: Complete Phase 4 & 5 - Testing & CI/CD Infrastructure
Phase 4 Completed:
✅ Jest configuration with coverage thresholds
✅ Comprehensive test suites for core components
✅ Unit tests for StockApp, BooksApp, POSApp
✅ Component tests for ActionButton, DataCard, LoadingComponents
✅ Hook tests for useAsyncData, useSearch
✅ Utility tests for validation, cache, performance
✅ Global error boundaries and error handling
✅ Form validation with Zod schemas
✅ Enhanced error tracking and monitoring

Phase 5 Completed:
✅ Enhanced CI/CD pipeline with test coverage
✅ Automated testing and build workflows
✅ Production-ready error monitoring setup
✅ Performance tracking utilities
✅ Quality assurance documentation

All 5 phases of enhancement plan now complete with:
- 70%+ test coverage target
- Comprehensive error handling
- Production monitoring ready
- Enhanced CI/CD pipeline
- Zero functionality loss

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,18 +1,18 @@
-name: Binna Platform CI/CD
+name: Enhanced Binna Platform CI/CD
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, enhancement-* ]
   pull_request:
     branches: [ main, develop ]
 
 env:
-  NODE_VERSION: '18.x'
+  NODE_VERSION: '20.x'
   PNPM_VERSION: '8.x'
 
 jobs:
-  # Test and Build
-  test-and-build:
+  # Lint and Test
+  quality-checks:
     runs-on: ubuntu-latest
     
     steps:
@@ -33,16 +33,17 @@ jobs:
     - name: Run linting
       run: npm run lint
     
-    - name: Run tests
-      run: npm run test || true  # Allow tests to pass even if some fail during CI setup
+    - name: Run unit tests
+      run: npm run test:ci
       env:
         CI: true
     
-    - name: Upload coverage to Codecov
+    - name: Upload test coverage
       uses: codecov/codecov-action@v3
-      if: false  # Disable until coverage is configured
       with:
         file: ./coverage/lcov.info
+        flags: unittests
+        name: codecov-umbrella
     
     - name: Build application
       run: npm run build
