--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write .",
     "cleanup-pages": "node scripts/cleanup-pages.js",
@@ -153,7 +155,6 @@
     "typescript": "^5.8.3",
     "uuid": "^11.1.0",
     "validator": "^13.15.15",
-    "zod": "^3.22.4",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
@@ -212,7 +213,8 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "webpack": "^5.99.7"
+    "webpack": "^5.99.7",
+    "zod": "^4.0.14"
   },
   "overrides": {
     "@swc/core": "1.5.7",
