Phase 4-6: Service consolidation and domain component organization
- Consolidated all services from core/services/ to unified src/services/ directory
- Fixed marketplace service TypeScript errors by properly extracting types
- Moved marketplace components to domains/marketplace/components/
- Organized user, store, auth, and admin components into domain-specific directories
- Updated import paths in all marketplace pages to use new domain structure
- Created missing domain directories (auth/components, admin/components)
- Moved additional platform services to unified services directory

Services consolidated:
- marketplace.ts (with type extraction fixed)
- cart.ts, construction.ts, project.ts, etc.
- All construction-related services
- Platform data and supervisor services

Components organized by domain:
- Marketplace: All marketplace components moved to domains/marketplace/
- User: user-menu.tsx, user-link.tsx
- Store: StoreDashboard.tsx, StoreProfileForm.tsx, StoreAnalyticsDashboard.tsx
- Auth: auth-guard.tsx
- Admin: admin-only-cell.tsx

Import paths updated throughout marketplace pages to reflect new structure.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,16 +31,16 @@
         "src/core/shared/components/*",
         "components/*"
       ],
-      "@/ui/*": [
-        "src/core/shared/components/ui/*"
+      "@/services/*": [
+        "src/services/*",
+        "src/core/shared/services/*"
       ],
       "@/hooks/*": [
+        "src/hooks/*",
         "src/core/shared/hooks/*"
       ],
-      "@/utils/*": [
-        "src/core/shared/utils/*"
-      ],
       "@/types/*": [
+        "src/types/*",
         "src/core/shared/types/*"
       ],
       "@/lib/*": [
@@ -49,9 +49,6 @@
       ],
       "@/constants/*": [
         "src/core/shared/constants/*"
-      ],
-      "@/services/*": [
-        "src/core/shared/services/*"
       ],
       "@/domains/*": [
         "src/domains/*"
