--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,21 @@
       "@/*": [
         "src/*"
       ],
+      "@components/*": [
+        "src/components/*"
+      ],
+      "@services/*": [
+        "src/services/*"
+      ],
+      "@hooks/*": [
+        "src/hooks/*"
+      ],
+      "@types/*": [
+        "src/types/*"
+      ],
+      "@domains/*": [
+        "src/domains/*"
+      ],
       "@/shared/*": [
         "src/core/shared/*"
       ],
