Phase 4: Path aliases and component consolidation
- Updated tsconfig.json with comprehensive path aliases as per plan:
  - @components/* for src/components/*
  - @services/* for src/services/*
  - @hooks/* for src/hooks/*
  - @types/* for src/types/*
  - @domains/* for src/domains/*
  - @lib/* for src/lib/*
  - @utils/* for src/utils/*
  - @constants/* for src/constants/*

- Moved UI components to src/components/ui/:
  - data-table.tsx, data-table-root.tsx
  - empty-table-content.tsx
  - form.tsx, keybound-form.tsx

- Moved domain-specific components:
  - product-list-table.tsx to marketplace domain

Following Enhanced File Organization Plan Phase 4 - setting up path aliases and continuing component organization.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,35 +38,17 @@
       "@domains/*": [
         "src/domains/*"
       ],
-      "@/shared/*": [
+      "@shared/*": [
         "src/core/shared/*"
       ],
-      "@/components/*": [
-        "src/components/*",
-        "src/core/shared/components/*",
-        "components/*"
-      ],
-      "@/services/*": [
-        "src/services/*",
-        "src/core/shared/services/*"
-      ],
-      "@/hooks/*": [
-        "src/hooks/*",
-        "src/core/shared/hooks/*"
-      ],
-      "@/types/*": [
-        "src/types/*",
-        "src/core/shared/types/*"
-      ],
-      "@/lib/*": [
-        "src/core/shared/lib/*",
+      "@lib/*": [
         "src/lib/*"
       ],
-      "@/constants/*": [
-        "src/core/shared/constants/*"
+      "@utils/*": [
+        "src/utils/*"
       ],
-      "@/domains/*": [
-        "src/domains/*"
+      "@constants/*": [
+        "src/constants/*"
       ]
     },
     "plugins": [
