--- a/package.json
+++ b/package.json
@@ -176,6 +176,7 @@
     "typescript": "^5.8.3",
     "uuid": "^11.1.0",
     "validator": "^13.15.15",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
