--- a/package.json
+++ b/package.json
@@ -176,7 +176,7 @@
     "typescript": "^5.8.3",
     "uuid": "^11.1.0",
     "validator": "^13.15.15",
-    "xlsx": "^0.18.5",
+  "xlsx": "^0.18.5",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
@@ -250,7 +250,8 @@
     "multer": "^2.0.2",
     "axios": "^1.11.0",
     "esbuild": "^0.25.8",
-    "on-headers": "^1.1.0"
+  "on-headers": "^1.1.0",
+  "@eslint/plugin-kit": "^0.3.4"
   },
   "husky": {
     "hooks": {
