feat(ai): add mock Construction Advice and Arabic Invoice Extraction endpoints and types; backup AI legacy branch/tag

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -89,6 +89,12 @@
 				"$tsc"
 			],
 			"group": "build"
+		},
+		{
+			"label": "Type Check (tsc)",
+			"type": "shell",
+			"command": "npm run type-check",
+			"group": "build"
 		}
 	]
 }
