Archive smart construction advisor; redirect to Building Advice; remove old smart links; update Help Center; final AI legacy cleanup

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -95,6 +95,24 @@
 			"type": "shell",
 			"command": "npm run type-check",
 			"group": "build"
+		},
+		{
+			"label": "Type Check (tsc)",
+			"type": "shell",
+			"command": "npm run type-check",
+			"group": "build"
+		},
+		{
+			"label": "Type Check (tsc)",
+			"type": "shell",
+			"command": "npm run type-check",
+			"group": "build"
+		},
+		{
+			"label": "Type Check (tsc)",
+			"type": "shell",
+			"command": "npm run type-check",
+			"group": "build"
 		}
 	]
 }
